@@ -1,3 +1,8 @@
+2007-01-14  Edward Hervey  <edward@fluendo.com>
+
+	* pitivi/ui/timelineobjects.py:
+	Forgot to add this file during the last commit.
+
 2007-01-10  Edward Hervey  <edward@fluendo.com>
 
 	* configure.ac:
